--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 *{
      margin:0;
     padding:0;
+    box-sizing: border-box;
 }
 
 body{
     background: #000;
     color: white;
+    font-family: 'Open Sans',sans-serif;
 }
 .container{
     display: flex;
     background: #000;
+    min-height: 100vh;
 }
 
 
@@ -18,6 +21,7 @@ width: 25vw;
 margin: 3px;
 padding: 10px;
 color: white;
+ transition: all 0.3s ease-in-out;
 }
 
 .home{
@@ -31,16 +35,24 @@ color: white;
     border-radius: 7px;
      margin: 5px;
       padding: 10px;
-      min-height: 69vh;
+      min-height: calc(100vh- 180px);
       position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
 }
 
 .home ul li{
-    width: 14px;
+    width: 100%;
     display: flex;
     gap: 15px;
     padding-top: 14px;
     font-weight: bold;
+    align-items: center;
+    cursor: pointer;
+}
+.home ul li img{
+    width: 24px;
 }
 
 .invert{
@@ -50,12 +62,13 @@ filter: invert(1);
 .heading{
       width: 100%;
     display: flex;
+    flex-wrap: wrap;
     gap: 15px;
-  padding-top: 14px;
+  /* padding-top: 14px; */
   padding: 23px 14px;
     font-weight: bold;
     align-items: center;
-    font-size: 13px;
+    font-size: 1rem;
 }  
 
 .heading img{
@@ -65,17 +78,16 @@ filter: invert(1);
 .footer{
     display: flex;
 flex-wrap: wrap;
-    font-size: 10px;
+    font-size: 0.7rem;
     gap: 13px;
-    position: absolute;
     bottom: 10px;
-   
-   
+    padding:10px 0 ;
 }
 .footer a{
 color: grey;
 /* white-space: nowrap; */
 display: block;
+text-decoration: none;
 }
 
 
@@ -85,7 +97,9 @@ display: block;
     border-radius: 7px;
     margin:16px 0;
     width: 75vw;
-
+    overflow: hidden;
+    flex-grow: 1;
+position: relative;
 }
 
 
@@ -98,10 +112,18 @@ display: block;
 .header{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 0.8rem;
-    padding: 5px;
+    padding: 10px 15px;
     background-color: rgb(34, 34, 34);
     border-radius: 5px;
+}
+
+.navs{
+    width: 24px;
+    cursor: pointer;
+    margin: 0 5px;
+
 }
 
 .buttons{
@@ -109,43 +131,39 @@ display: block;
   gap: 10px;
 align-items: center;
 }
+
 .buttons button{
     cursor: pointer;
     font-weight: bold;
     padding: 0 12px;
-    height: 1.6rem;
+    height: 2.2rem;
+    border-radius: 21px;
+    transition: all 0.4s ease-in-out;
 }
 
 .Sign_up{
     border: none;
     outline: none;
     background-color:rgb(34, 34, 34);
-    color: black;
+    font-size: 1rem;
 }
 
 .Sign_up:hover{
  color: white;
-  font-size: 17px;
-   transition: all 1s ease-out;
+  font-size: 1.05rem;
 }
 
 .Log_in{
-    background: white;
     border-radius: 21px;
-    color: #000;
     width: 79px;
-    font-size: 16px;
+     font-size: 1rem;
+    border: none;
+    outline: none;
 }
 
 .Log_in:hover{
-    font-size: 17px;
-    font-weight: bold;
-    transition: all 1s ease-out;
-}
-
-
-.header img{
-    width: 24px;
+        font-size: 1.05rem;
+    background-color: #f0f0f0;
 }
 
 .spotify_playlist h1{
@@ -156,16 +174,12 @@ margin: 1rem;
 .card_container{
     padding: 1rem;
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
-     max-height: 60vh;
-   overflow: scroll;
-}
-
-.cards > *{
-    padding-top: 10px;
-    border-radius: 5px;
-    background-color: #252525;
+    justify-content: center;
+    gap: 20px;
+     max-height: calc(100vh - 250px);
+   overflow-y: auto;
+   padding-bottom: 50px;
 }
 
 .cards{
@@ -174,7 +188,14 @@ margin: 1rem;
      margin-bottom: 1rem;  
    border-radius: 10px;
     width: 200px;
+    max-width: 100%;
     position: relative;
+  
+}
+
+.cards:hover {
+     transition: background-color 0.4s ease;
+    background-color: #353535; /* Darken on hover */
 }
 .cards img{
     width: 100%;
@@ -182,31 +203,48 @@ margin: 1rem;
     border-radius: 1rem;
 }
 
+.cards h2 {
+    font-size: 1rem;
+    margin-top: 10px;
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; /* Add ellipsis for overflow text */
+}
+
+.cards p {
+    font-size: 0.8rem;
+    color: #b3b3b3;
+    margin-top: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .play_button{
-    height: 28px;
-width: 28px;
+    height: 40px;
+width: 40px;
 background-color: #1fdf64;
 border-radius: 50%;
-padding: 4px;
+padding: 8px;
 display: flex;
 align-items: center;
 justify-content: center;
 position: absolute;
-top: 168px;
-right: 17px;
+top: 140px;
+right: 15px;
 opacity: 0;
-transition: all 1s ease-out;
+transition: all 0.5s ease-out;
+cursor: pointer;
+box-shadow: 0 4px 15px rgb(0, 0, 0 0.4)  ;
 }
 
 
 .play_button img{
-width: 14px;
-position: absolute;
-right: 10px;
+width: 18px;
+position: static;
 }
 
-.cards:hover{
-    .play_button{
-        opacity: 100%;
-    }
+.cards:hover .play_button{
+        opacity: 1;
+        top: 150px;
 }
