--- a/style.css
+++ b/style.css
@@ -248,3 +248,16 @@ position: static;
         opacity: 1;
         top: 150px;
 }
+
+.playbar{
+    background-color: lightgreen;
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   padding: 12px;
+}
+.songsbutton{
+ display: flex;
+    justify-content: center;
+    gap: 16px;
+}
